--- a/src/views/styles/popup.css
+++ b/src/views/styles/popup.css
@@ -1,60 +1,27 @@
 body {
   font-family: Roboto, sans-serif;
   width: 250px;
-  padding: 10px 10px 5px;
+  padding: 16px;
+  padding-bottom: 4px;
   font-size: 1rem;
   box-sizing: border-box;
 }
 
-/*
-      Necessary to not keep any whitespace
-      in the bottom part of the popup
-    */
-html {
-  height: unset !important;
+/* Necessary to not keep any whitespace in the bottom part of the popup */
+
+.extension-popup {
+  height: unset;
 }
 
-::-webkit-scrollbar {
-  display: none;
-}
-
-[aria-checked="false"] ~ .s-switch__track {
-  background-color: lightgray;
-}
-[aria-checked="false"] ~ .s-switch__thumb {
-  background-color: #aaaaaa;
-}
-
-.s-list-item__title > .text-subtitle-1 {
-  white-space: pre-wrap;
+.extension-popup body {
+  line-height: 1.2;
 }
 
 .i18n--rtl {
   direction: rtl;
 }
-.i18n--rtl .s-slider__connects::before {
-  left: 0;
-  right: 0;
-}
 
-.i18n--rtl .s-slider__label {
-  margin-right: 0 !important;
-}
-
-.i18n--rtl .s-list-item [slot="prepend"] .s-icon {
-  margin-right: 0 !important;
-  margin-left: 24px;
-  direction: rtl;
-}
-
-.i18n--rtl [aria-checked="true"] ~ .s-switch__thumb {
-  transform: translate(-20px) !important;
-}
-
-.i18n--rtl .s-switch label {
-  margin-left: 0 !important;
-  margin-right: 8px;
-}
+/* subheader */
 
 .subheader {
   color: #194197;
@@ -64,6 +31,62 @@ html {
 .subheader:not(:first-child) {
   margin-top: 10px;
 }
+
+/* list overrides */
+
+.extension-popup .s-list {
+  margin: 0 -16px;
+}
+
+.s-list-item__title > .text-subtitle-1 {
+  white-space: pre-wrap;
+}
+
+.i18n--rtl .s-list-item [slot="prepend"] .s-icon {
+  margin-right: 0 !important;
+  margin-left: 24px;
+  direction: rtl;
+}
+
+/* slider overrides */
+
+.i18n--rtl .s-slider__connects::before {
+  left: 0;
+  right: 0;
+}
+
+.i18n--rtl .s-slider__label {
+  margin-right: 0 !important;
+}
+
+/* switch overrides */
+
+.s-switch {
+  margin-top: 8px !important;
+  margin-bottom: 12px !important;
+}
+
+[aria-checked="false"] ~ .s-switch__track {
+  background-color: lightgray;
+}
+[aria-checked="false"] ~ .s-switch__thumb {
+  background-color: #aaaaaa;
+}
+
+.i18n--rtl [aria-checked="true"] ~ .s-switch__thumb {
+  transform: translate(-20px) !important;
+}
+
+.s-switch label {
+  margin-left: 16px !important;
+}
+
+.i18n--rtl .s-switch label {
+  margin-left: 0 !important;
+  margin-right: 8px;
+}
+
+/* usability */
 
 @media (prefers-reduced-motion: reduce) {
   *,
