--- a/src/views/styles/popup.css
+++ b/src/views/styles/popup.css
@@ -1,10 +1,11 @@
 body {
-  font-family: Roboto, sans-serif;
-  width: 250px;
-  padding: 16px 16px 4px;
-  font-size: 1rem;
-  box-sizing: border-box;
   overflow: hidden;
+  box-sizing: border-box;
+  width: 250px;
+  padding: 16px;
+  padding-bottom: 4px;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 1rem;
 }
 
 /* Necessary to not keep any whitespace in the bottom part of the popup */
@@ -55,8 +56,8 @@ body {
 /* Slider overrides */
 
 .i18n--rtl .s-slider__connects::before {
-  left: 0;
   right: 0;
+  left: 0;
 }
 
 .i18n--rtl .s-slider__label {
@@ -71,8 +72,9 @@ body {
 }
 
 [aria-checked="false"] ~ .s-switch__track {
-  background-color: lightgray;
+  background-color: #d3d3d3;
 }
+
 [aria-checked="false"] ~ .s-switch__thumb {
   background-color: #aaaaaa;
 }
@@ -86,8 +88,8 @@ body {
 }
 
 .i18n--rtl .s-switch label {
-  margin-left: 0 !important;
   margin-right: 8px;
+  margin-left: 0 !important;
 }
 
 /* Accessibility */
@@ -96,7 +98,7 @@ body {
   *,
   ::before,
   ::after {
-    transition: 0s !important;
+    transition: 0ms !important;
     animation-duration: 0ms !important;
   }
 }
