--- a/tests/local-embed.css
+++ b/tests/local-embed.css
@@ -10,7 +10,7 @@ html {
   color: #ffd000;
   font-family: sans-serif;
   font-weight: 400;
-  font-size: 19px;
+  font-size: 1.1875rem;
   text-shadow: 1px 1px 1px #000000;
 }
 
@@ -24,7 +24,7 @@ html {
 .test-clock {
   color: #c0c0ff;
   font-family: sans-serif;
-  font-size: 19px;
+  font-size: 1.1875rem;
   font-kerning: none;
   text-shadow: 1px 1px 1px #000000;
 }
