_main.scss: Added a font size fallback for Firefox

--- a/src/popup/styles/_main.scss
+++ b/src/popup/styles/_main.scss
@@ -18,7 +18,7 @@ hr {
 // Global
 body {
   width: 280px;
-  font-size: 0.85rem;
+  font-size: max(0.85rem, 13px);
   font-family: Roboto, Arial, sans-serif;
   padding: 12px 18px 16px;
   overflow: hidden;
