injected-style.scss: Added an ignore comment

--- a/src/cs-helpers/mobile/injected-style.scss
+++ b/src/cs-helpers/mobile/injected-style.scss
@@ -1,4 +1,5 @@
 html:not(.ythd-modal-shown) {
+  //noinspection CssInvalidHtmlTagReference
   .dialog-container,
   bottom-sheet-container {
     visibility: hidden;
