--- a/src/cs-helpers/desktop/injected-style.scss
+++ b/src/cs-helpers/desktop/injected-style.scss
@@ -1,4 +1,4 @@
-.ythd-israel-support {
+.ythd-promotion {
   background-color: hsl(0, 0%, 20%);
   display: flex;
   flex-direction: column;
@@ -11,14 +11,14 @@
   &__header {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 2rem;
+    margin-bottom: 5px;
     width: 100%;
   }
 
   &__title {
     color: hsl(0, 100%, 70%);
     font-size: 2rem;
-    margin: 0 auto;
+    margin: 0;
   }
 
   &__close {
@@ -35,5 +35,10 @@
 
   &__description {
     color: hsl(0, 0%, 100%);
+    margin: 0;
+
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
   }
 }
