--- a/src/cs-helpers/desktop/injected-style.scss
+++ b/src/cs-helpers/desktop/injected-style.scss
@@ -10,41 +10,15 @@
 
 .ythd-promotion-yttm {
   background-color: var(--yt-spec-additive-background, rgba(0, 0, 0, 0.5));
-  padding: 2rem;
+  padding: 12px;
   margin-bottom: 10px;
   direction: ltr;
   border-radius: 8px;
 
-  &__header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 5px;
-    width: 100%;
-  }
-
   &__title {
     color: var(--yt-spec-text-primary, #0f0f0f);
-    margin: 0;
+    margin: 0 0 4px 0;
     font-size: 1.4rem;
-  }
-
-  &__close {
-    color: black;
-    cursor: pointer;
-    background: url('data:image/svg+xml,<svg viewBox="0 0 79 79" fill="none" xmlns="http://www.w3.org/2000/svg"><line x1="23.3536" y1="22.6464" x2="56.4768" y2="55.7697" stroke="black" stroke-width="3"/><line x1="22.6464" y1="55.7697" x2="55.7697" y2="22.6464" stroke="black" stroke-width="3"/></svg>') lightgray no-repeat center center;
-    border: none;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    display: grid;
-    place-items: center;
-  }
-
-  &.dark {
-    .ythd-promotion-yttm__close {
-      background: url('data:image/svg+xml,<svg viewBox="0 0 79 79" fill="none" xmlns="http://www.w3.org/2000/svg"><line x1="23.3536" y1="22.6464" x2="56.4768" y2="55.7697" stroke="white" stroke-width="3"/><line x1="22.6464" y1="55.7697" x2="55.7697" y2="22.6464" stroke="white" stroke-width="3"/></svg>') hsl(0, 0%, 40%) no-repeat center center;
-    }
   }
 
   &__description {
@@ -61,5 +35,13 @@
   &__link {
     color: var(--yt-spec-call-to-action, #3ea6ff);
     text-decoration: none;
+  }
+
+  &__close {
+    color: var(--yt-spec-call-to-action, #3ea6ff);
+    border: none;
+    padding: 0;
+    background: none;
+    cursor: pointer;
   }
 }
