--- a/src/cs-helpers/desktop/injected-style.scss
+++ b/src/cs-helpers/desktop/injected-style.scss
@@ -8,7 +8,7 @@
   flex: 1;
 }
 
-.ythd-promotion-yttm {
+.ythd-donation {
   background-color: var(--yt-spec-additive-background, rgba(0, 0, 0, 0.5));
   padding: 12px;
   margin-bottom: 10px;
